4.1.2 Return of mcMMO integration! Fix Java complaints about about static initialization. Remove duplicate methods from records. Ensure the shop doesn't open if Vault isn't enabled. Fix some message formatting. Fix Fish Shop. New Scoreboard feature that shows the top 5 players in a competition. Many, many fixes.